# hiking-app

./: .gitignore  Dockerfile  Procfile  README.md  app.py  app_settings.py  create_user.ipynb  db.py  docker-compose.yml  fly.toml  index.html  ingest.py  package-lock.json  package.json  pyproject.toml  read_gpx.ipynb
.github/workflows/: deploy.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: CreateAccount.tsx  DropZone.tsx  Login.tsx  Map.tsx  NavBar.css  NavBar.tsx  PrivateRoute.tsx  root.css
frontend/src/routes/: PrivateRoute.tsx  create-account.tsx  login.tsx  root.tsx
notebooks/: read_gpx.ipynb
public/: tracks.geojson
src/: main.tsx
src/components/: Map.tsx  NavBar.css  NavBar.tsx
src/data/: topsail-road-miners-path.gpx
src/routes/: root.tsx
src/utils/: gpx-to-geojson.ts
