[tool.poetry]
name = "hiking-app"
version = "0.1.0"
description = ""
authors = ["Keenan Nicholson <Keenanbnicholson@gmail.com>"]
readme = "README.md"
packages = [{include = "hiking_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
geopandas = "^0.13.2"
sqlalchemy = "^2.0.18"
geoalchemy2 = "^0.14.0"
tipg = "^0.3.0"
pydantic = "^1.10.11"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
gpxpy = "^1.5.0"
matplotlib = "^3.7.2"
hvplot = "^0.8.4"
cartopy = "^0.21.1"
geoviews = "^1.10.0"
contextily = "^1.3.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
